--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -351,7 +351,7 @@
             <field name="name">Selection line</field>
             <field name="model">estate.nursery.selectionline</field>
             <field name="arch" type="xml">
-                <tree string="Seed Selection Line" colors="red:qty" editable="top">
+                <tree string="Seed Selection Line" colors="red:qty" editable="bottom">
                     <field name="cause_id"/>
                     <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty" />
                     <field name="location_id"/>
@@ -369,6 +369,7 @@
                         <group>
                             <group>
                                 <field name="cause_id" />
+                                <field name="qty_batch"/>
                                 <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty" />
                             </group>
                             <group coolspan="10">
