--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -206,7 +206,8 @@
                             <field name="date_planted" attrs="{'required': [('state','=','draft')], 'readonly': [('state','=','done')]}"/>
                             <field name="state" invisible="True"/>
                             <field name="stage_id" invisible="True" readonly="True"/>
-                            <field name="status"/>
+                            <field name="status" invisible="1" context="{'default_status' : False}"/>
+                            <field name="status_age" invisible="1" context="{'default_status' : False}"/>
                         </group>
                         <group name="top_right">
                             <field name="picking_id"/>
@@ -217,9 +218,12 @@
                         <page string="Detail Information">
                             <group name="top" string="Information">
                                 <group name="top_left">
-                                    <field name="age_seed_range" attrs="{'readonly': [('state','=','done')]}"/>
+                                    <field name="age_seed_grow" readonly="1"
+                                           attrs="{'invisible': [('age_seed_range','=',True)]}"/>
+                                    <field name="age_seed_range" readonly="1" attrs="{'invisible': [('age_seed_range','=',0)]}"/>
                                     <field name="qty_received" attrs="{'readonly': [('state','!=','draft')]}"/>
                                     <field name="qty_normal" attrs="{'readonly': [('state','!=','draft')]}"/>
+                                    <field name="qty_double" invisible="1"/>
                                     <field name="qty_abnormal" attrs="{'readonly': [('state','!=','draft')]}"/>
                                     <field name="qty_planted_temp" attrs="{'readonly': [('state','!=','draft')]}"/>
                                     <field name="qty_planted" attrs="{'readonly': [('state','!=','draft')]}" invisible="1"/>
@@ -235,6 +239,7 @@
                                     'readonly': [('state','=','done')]}"/>
                                     <field name="age_seed" attrs="{'required': [('state','=','draft')],
                                     'readonly': [('state','=','done')]}"/> month
+                                    <field name="selection_count" invisible="1"/>
                                 </group>
                             </group>
                         </page>
@@ -242,35 +247,21 @@
                             <field name="batchline_ids" attrs="{'readonly' : [('state', '!=', 'draft')]}"
                                 context="{'tree_view_ref' : 'estate_nursery.view_seed_batchline_tree'}"/>
                         </page>
+
                         <page string="Selection">
                             <field name="selection_ids" string="Create Selection" attrs="{
-                            'required' : [('state', '=', 'draft')]}"
+                            'required' : [('state', '=', 'draft')],'readonly' : [('selection_count', '>', 6)]}"
                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_selection_nursery',
                                    'default_qty_plante': qty_planted}"/>
                         </page>
-                        <page string="Cleavage Polytone">
-                            <field name="cleavage_ids" string="Create Cleavage Polytone" attrs="{
-                            'required' : [('state', '=', 'draft')]}"
-                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_cleavage_polytone',
+
+                        <page string="Cleaving Polytone">
+                            <field name="cleaving_ids" string="Create Cleaving Polytone" attrs="{
+                            'invisible' : [('qty_double', '=',0)],'readonly' : ['|',('status','=',True),
+                            ('selection_count','!=',3),('status_age','!=',True)]}"
+                                   context="{'tree_view_ref' : 'estate_nursery.view_tree_cleaving_polytone',
                                    'default_qty_plante': qty_planted }"/>
                         </page>
-
-                        <!--<page string="Information Cleavage Seed" >-->
-                            <!--<group name="bottom" string="Information Cleavage Seed ">-->
-                                <!--<group>-->
-                                    <!--<field name="qty_double" string="Quantity Double" readonly="1"/>-->
-                                    <!--<field name="qty_single" string="Quantity Single" readonly="1"/>-->
-                                <!--</group>-->
-                                <!--<group coolspan="10">-->
-                                    <!--<field name="qty_normal_double" string="Quantity Normal Cleavage"/>-->
-                                    <!--<field name="qty_abnormal_double" string="Quantity Abnormal Cleavage"/>-->
-                                <!--</group>-->
-
-                                <!--<field name="cleavageln_ids" domain="[('batch_id','=',batch_id)]"-->
-                                       <!--context="{'tree_view_ref' : 'estate_nursery.iew_tree_cleavageline_polytone'}"-->
-                                        <!--/>-->
-                            <!--</group>-->
-                        <!--</page>-->
 
                         <page string="Additional Information">
                             <group name="bottom" string="Information">
