[ADD] estate: stand per hectare
- update module dependency: hr_indonesia.
- create data module stand per hectare.
- update estate.block.template.
- computed value qty_sph_standard & do not finished yet.

--- a/estate/views/estate.xml
+++ b/estate/views/estate.xml
@@ -73,6 +73,7 @@
                             <field name="qty_tree_immature"/>
                             <field name="qty_tree_mature_normal"/>
                             <field name="qty_tree_mature_abnormal"/>
+                            <field name="qty_sph_standard"/>
                         </group>
 
                         <group string="Assets" attrs="{'invisible': [('estate_location_type','=', 'nursery')]}">
