--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -113,17 +113,18 @@
             <field name="name">Selection abnormal</field>
             <field name="model">estate.nursery.selection</field>
             <field name="arch" type="xml">
-                   <graph string="Graph Selection stage" type="bar">
+                   <graph string="Graph Selection stage" type="pivot">
                        <field name="selectionstage_id" string="selection stage"/>
-                       <field name="batch_id" string=" number batch" />
-                       <field name="qty_abnormal" type="measure"/>
+                       <!--<field name="batch_id" string=" number batch" />-->
                        <field name="qty_normal" type="measure"/>
+                       <field name="qty_abnormal" type="measure"/>
+                       <field name="nursery_persentagen" type="measure"/>
                    </graph>
             </field>
         </record>
 
         <record id="view_graph_selection_normal_nursery" model ="ir.ui.view">
-            <field name="name">Selection normal</field>
+            <field name="name">Selection Planted</field>
             <field name="model">estate.nursery.selection</field>
             <field name="arch" type="xml">
                    <graph string="Graph Selection" type="pie">
@@ -134,7 +135,7 @@
         </record>
 
         <record id="view_graph_selectiondate_nursery" model ="ir.ui.view">
-            <field name="name">Selection normal</field>
+            <field name="name">Selection Information</field>
             <field name="model">estate.nursery.selection</field>
             <field name="arch" type="xml">
                    <graph string="Graph Selection date" type="bar">
@@ -211,7 +212,7 @@
                     <field name="qty_batch" string="&#931;  DO." />
                     <field name="qty_normal" string="&#931;  Normal." sum="Qty Normal"/>
                     <field name="qty_abnormal" string="&#931;  Abnormal." sum="Qty Abnormal"/>
-                    <field name="nursery_persentagen" string="% normal. " />
+                    <field name="nursery_persentagen" string="% normal. "/>
                     <field name="nursery_persentagea" string="% abnormal."/>
                     <field name="qty_plant" string="&#931;  PLT." sum="Qty Normal" />
                     <field name="nursery_information"/>
@@ -283,6 +284,7 @@
                                 <field name="variety" invisible="1"/>
                                 <field name="stage" invisible="1"/>
                                 <field name="qty_plante" invisible="1"/>
+                                <field name="flag"/>
                                 <field name="selection_date"
                                        attrs="{'invisible': [('selectionstage_id','=',False)],
                                  'readonly': [('state','=','done')]}"/>
@@ -392,7 +394,7 @@
         <record model="ir.actions.act_window" id="action_list_selection" >
             <field name="name">Selection</field>
             <field name="res_model">estate.nursery.selection</field>
-            <field name="view_mode">kanban,tree,form,graph</field>
+            <field name="view_mode">graph,kanban,tree,form</field>
             <field name="view_search_selection" ref="estate_nursery.view_form_selection_nursery"/>
         </record>
         <record model="ir.actions.act_window" id="action_list_selectionstage">
@@ -409,7 +411,7 @@
         <!-- MENU -->
         <menuitem id="nursery_seed_selection"
                   name="Selection"
-                  parent="estate_nursery_menu"
+                  parent="nursery_seed_batch"
                   action="action_list_selection" sequence="15" />
         <menuitem id="nursery_line_selection_stage"
                   name="Batch Selection Stage"
